# qa-auto-engineer-python-project-241

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: expected_json.txt
